--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,8 @@ body {
 .header h1 {
     display: inline-block;
     font-size: 48px;
-    position: relative;
-    left: 20px;
+    padding-left: 20px;
+    padding-top: 50px;
 }
 
 .header div {
