--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
 }
-
+/* Displays stored image */
 .main-header {
   flex: 1 0 200px;
   background-image: url(../images/header_image.jpg);
@@ -15,15 +15,15 @@
 
 h1 {
   font-size: 45px;
-  padding: 40px 20px;
   text-align: left;
+  padding: 40px 20px;
 }
 
 body {
   background-color: #d9dcd6;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
+/* Configures the main body & containers */
 main {
   display: flex;
   flex-wrap: wrap;
@@ -31,6 +31,7 @@ main {
   justify-content: flex-end;
 }
 
+/* Configures the links at top right under header */
 .link >a {
     font-size: 20px;
     margin-top: 200px;
@@ -44,7 +45,7 @@ main {
   padding-left: 20px;
 }
 
-   /* Sets position, padding to 20px and left and right to 40px */
+/* Formats container1; width to 80% of page; padding to 20px */
 .container1 {
   position: relative;
   top: 100px;
@@ -57,6 +58,8 @@ main {
   top: -30px;
   left: 40px;
 }
+
+/* Sets the section title to the left of the content */
 .container1_title {
   position: relative;
   top: 0;
@@ -65,21 +68,27 @@ main {
   color: #5c7998;
 }
 
-   /* Sets position, ,padding to 20px and left and right to 40px */
+  /* Formats container2, ,padding to 20px and left and right to 40px */
   .container2 {
     top: 50px;
     width: 80%;
-    padding: 20px 40px;
-    
+    padding: 20px 40px;    
+  }
+  /* Configured Parent1 so that boxes with images are in a column */
+  /* to cater for a larger display box at top with smaller boxes below*/
+  .parent-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
   }
 
-  .align {
+  /* Sets the smaller boxes to wrap*/
+  .parent-2 {
     display: flex;
     flex-wrap: wrap;
-    
-
   }
 
+  /* Sets the content title to the left of the content */
   .container2_title {
     position: relative;
     top: 50px;
@@ -88,7 +97,7 @@ main {
     color: #5c7998; 
   }
  
-/* label box with text */
+/* label box with text set inside the imabe box */
   .label {
     Position: absolute;
     top: 250px;
@@ -100,7 +109,8 @@ main {
     padding-top: 0.8rem;
     padding-left: 1.5rem;
 }
- 
+
+/* Sets the box around each image */
   .box {
     padding: 10px;
     outline: 5px solid  #26418e;
@@ -108,10 +118,11 @@ main {
     transition: all 0.5s ease-in-out;
   }
  
+/* shadow effect on right and bottom edge when cursor hovers over the image */
   .box:hover {
   box-shadow: 10px 10px 10px 10px #829ab3;
   }
-
+/* Contains links that are just placeholders at the monment */
 
   .container3 {
     position:relative;
@@ -141,9 +152,9 @@ main {
   .contact >li {
     display: inline-block;
     padding-left: 50px;
-  
   }
   
+/* footer set at bottom of the site */
   .footer {
       padding: 30px;
       clear: both;
